--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "electron": "^1.4.3",
     "electron-packager": "^8.3.0",
     "xo": "^0.17.1",
-    "bower": "^1.8.0"
+    "bower": "^1.8.0",
+    "gulp": "^3.9.1",
+    "gulp-latex": "^1.0.1"
   },
   "xo": {
     "esnext": true,
