--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "electron-packager": "^8.3.0",
     "xo": "^0.17.1",
     "bower": "^1.8.0",
+    "graceful-fs": "^4.1.10",
     "gulp": "^3.9.1",
     "gulp-latex": "^1.0.1"
   },
