Added latex to package json

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "xo": "^0.17.1",
     "bower": "^1.8.0",
     "graceful-fs": "^4.1.10",
+    "latex": "^0.0.1",
     "gulp": "^3.9.1",
     "gulp-latex": "^1.0.1"
   },
