Improved JS style in liking to XO

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "esnext": true,
     "space": true,
     "rules": {
-      "camelcase": 0
+      "max-depth": 0
     },
     "envs": [
       "node",
