--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "bootstrap": "v4.0.0-alpha.5",
     "font-awesome": "fontawesome#^4.7.0",
-    "pdfjs-dist": "^1.6.334"
+    "pdfjs-dist": "^1.6.334",
+    "typed.js": "^1.1.4"
   }
 }
